--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ background: linear-gradient(to right, #5D26C1, #a17fe0, #59C173); /* W3C, IE 10+
 background: -webkit-linear-gradient(to right, #5D26C1, #a17fe0, #59C173);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #5D26C1, #a17fe0, #59C173); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 text-align: center;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -31,7 +31,7 @@ text-align: center;
 
 .contact-body {
   margin: auto;
-  position: fixed;
+  /*position: fixed;*/
   width: 100%;
   height: 100%;
   justify-content: center;
@@ -79,7 +79,6 @@ text-align: center;
 }
 .avatar {
   height: 250px;
-  padding-top: 5em;
   border-radius: 50%;
 }
 
